# canopy-web

./: .dockerignore  .env.example  .gcloudignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Dockerfile.frontend  Procfile.dev  README.md  TODOS.md  cloudbuild.yaml  deploy-labs.sh  deploy.sh  docker-compose.yml  email.html  entrypoint.sh  pyproject.toml
.canopy/pm/: autonomous.yaml  context.md  learnings.md
.claude/pm/: context.md  learnings.md
.claude/walkthroughs/: canopy-web.yaml
.github/workflows/: ci.yml  contract-nightly.yml  deploy-labs.yml  publish-canopy-ui.yml  publish-workbench.yml  regen-openapi.yml
apps/agent_runs/: api.py  apps.py  models.py  resolver.py  schemas.py  stores.py
apps/agents/: admin.py  api.py  models.py  schemas.py  services.py  timeline.py
apps/api/: __init__.py  api.py  auth.py  errors.py  etag.py  mcp_server.py  pagination.py  renderers.py  tenancy.py  views.py
apps/canopy_sessions/: api.py  apps.py  attach.py  consumers.py  models.py  routing.py  schemas.py  services.py  signals.py  staleness.py  stream_map.py
apps/chat/: api.py  apps.py  consumers.py  drafts.py  executor.py  models.py  participants.py  presence.py  routing.py  schemas.py  serializers.py  services.py
apps/collections/: api.py  models.py  schemas.py  serializers.py  urls.py  views.py
apps/common/: anthropic_client.py  api.py  auth_adapter.py  auth_domains.py  auth_flow.py  csrf.py  ddd.py  encryption.py  envelope.py  middleware.py  schemas.py  urls.py  urls_ai.py  urls_debug.py  views.py  views_auth_e2e.py  views_debug.py
apps/evals/: api.py  apps.py  models.py  runner.py  schemas.py  serializers.py  urls.py  views.py
apps/harness/: admin.py  api.py  api_schedules.py  apps.py  cron.py  dispatch.py  items_api.py  models.py  notify.py  schedule_services.py  schemas.py  services.py  signals.py
apps/issues/: api.py  models.py  schemas.py
apps/mcp/: __init__.py  apps.py  audit.py  auth.py  models.py  rate_limit.py  server.py
apps/projects/: api.py  models.py  schemas.py  serializers.py  services.py  timeline.py  urls.py  views.py  views_insights.py
apps/push/: api.py  apps.py  models.py  schemas.py  services.py  signals.py
apps/realtime/: apps.py  channels_auth.py  consumers.py  groups.py  routing.py  signals.py  snapshot.py
apps/reviews/: api.py  models.py  schemas.py
apps/runs/: aggregate.py  api.py  ddd.py  delete.py  inference.py  schemas.py  timeline.py
apps/session_sharing/: api.py  apps.py  models.py  parser.py  redact.py  schemas.py  timeline.py
apps/sessions/: api.py  apps.py  models.py  redact.py  schemas.py  timeline.py
apps/shareouts/: api.py  apps.py  models.py  schemas.py  services.py  timeline.py
apps/skills/: api.py  models.py  schemas.py  serializers.py  timeline.py  urls.py  views.py
apps/system/: api.py  reader.py  schemas.py
apps/timeline/: api.py  schemas.py  sources.py  types.py
apps/tokens/: admin.py  api.py  apps.py  cli_authorize_views.py  middleware.py  models.py  schemas.py
apps/walkthroughs/: api.py  apps.py  drive_client.py  models.py  schemas.py  serializers.py  storage.py  streaming.py  timeline.py  urls.py  views.py
apps/workspace/: api.py  apps.py  engine.py  models.py  prompts.py  schemas.py  stream.py  timeline.py  urls.py  views.py
apps/workspaces/: api.py  models.py  schemas.py  services.py
assets/brand/: AppIcon.icns  README.md  generate.py
config/: asgi.py  asgi_prefix.py  urls.py  views.py
config/settings/: base.py  connectlabs.py  development.py  production.py  test.py
deploy/aws/: canopy-web.cfn.yaml  render_taskdef.py
deploy/ec2-runner/: .gitignore  README.md  cloud_runner.py  down.sh  runner.cfn.yaml  runner.env.example  secrets.sh  setup.sh  up.sh
deploy/secrets/: bootstrap_1password.sh  migrate_echo.sh
docs/: e2e-login.md
docs/architecture/: mcp-surface.md
docs/case-studies/: workbench-self-improvement.md
docs/designs/: canopy-web-design.md  ceo-plan-conversation-to-agent.md
docs/personas/: jonathan.md
docs/runbooks/: mobile-loop-real-emdash.md
docs/walkthroughs/: canopy-web-demo.yaml  project-workbench.yaml
frontend/: index.html  nginx.cloudrun.conf.template  nginx.prod.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/e2e/: README.md  agents.spec.ts  backend.sh  global-setup.ts  items.spec.ts  review.spec.ts  seed.py  supervisor.spec.ts
frontend/public/: sw-push.js
frontend/src/: App.tsx  index.css  main.tsx  router.tsx  vite-env.d.ts
scripts/: scan_all_skills.sh  scan_skills.sh
scripts/qa/: dispatch_one_continue.py  smoke_deployed.py  smoke_mobile_loop.py
tests/: conftest.py  test_adapters.py  test_agent_out_workspace.py  test_agent_runtime_api.py  test_agent_skill_launchable.py  test_agents.py  test_agents_fleet_needs_you.py  test_agents_turns_api.py  test_architecture_boundary.py  test_asgi_prefix.py  test_attach_registry.py  test_auth.py  test_auth_e2e.py  test_auth_token.py  test_chat_api.py  test_chat_e2e.py  test_chat_executor.py  test_chat_integration.py  test_chat_laptop_routing.py  test_chat_models.py  test_chat_multiplayer.py  test_chat_send.py  test_chat_serializers.py  test_chat_session_consumer.py  test_chat_stream_map.py  test_collections.py  test_common.py  test_ddd_release.py  test_debug_session.py  test_evals.py  test_fleet_inbox_items.py  test_harness_api.py  test_harness_authz.py  test_harness_cancel_turn.py  test_harness_claim_preference.py  test_harness_claim_projects.py  test_harness_claim_sessions.py  test_harness_emdash_sessions.py  test_harness_enqueue_projects.py  test_harness_events_signal.py  (+70 more)
(+462 files in other folders)
