[project]
name = "canopy-web"
version = "0.1.0"
description = "Canopy Web - Django ASGI backend with React frontend"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0,<6.0",
    "django-environ>=0.11,<1.0",
    "django-cors-headers>=4.3,<5.0",
    "django-allauth[socialaccount]>=0.61,<1.0",
    "whitenoise>=6.6,<7.0",
    "uvicorn[standard]>=0.27,<1.0",
    "psycopg[binary]>=3.1,<4.0",
    "anthropic>=0.40,<1.0",
    "django-ninja>=1.3,<2.0",
    "pydantic>=2.8,<3.0",
    "pydantic[email]>=2.8,<3.0",
    "orjson>=3.10",
    "langgraph>=0.2,<1.0",
    "langchain-anthropic>=0.3,<1.0",
    "langchain-core>=0.3,<1.0",
    "google-api-python-client>=2.120,<3.0",
    "google-auth>=2.29,<3.0",
    "fastmcp>=3.3,<4.0",
    # The Django-free run-lifecycle core (read model + RunStore Protocol + Drive
    # adapter). Lives in-repo at packages/canopy_agent_runs; resolved as an editable
    # path dep via [tool.uv.sources] below. Django's DbRunStore (apps/agent_runs)
    # implements the same Protocol over the ORM.
    "canopy-agent-runs",
    # The Django-free cron slot math for scheduled agent turns. Lives in-repo at
    # packages/canopy_cron; editable path dep via [tool.uv.sources] below. Shared
    # with the laptop runner, which is Django-free and cannot import apps.* — one
    # implementation, so the editor's preview and the runner's firing can't diverge.
    # It carries croniter (bound there, deliberately); nothing else here imports it.
    "canopy-cron",
    "pywebpush>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-django>=4.8,<5.0",
    "pytest-asyncio>=0.23,<1.0",
    "ruff>=0.4,<1.0",
    "schemathesis>=3.30,<4.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
# The run-lifecycle core ships in-repo as a standalone installable package; wire
# it as an editable path dep so `from canopy_agent_runs import ...` resolves under
# `uv run` without publishing to an index. A separate project (ace-web) installs
# the same package from its own source/index.
canopy-agent-runs = { path = "packages/canopy_agent_runs", editable = true }
# Same deal for the cron slot math: in-repo, standalone, installable. The runner
# (packages/canopy_runner) depends on it directly rather than via canopy-web.
canopy-cron = { path = "packages/canopy_cron", editable = true }

[tool.setuptools.packages.find]
include = ["apps*", "config*"]

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = ["**/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
asyncio_mode = "auto"
# The standalone packages/canopy_agent_runs has its OWN plain-pytest suite (no Django,
# no DB); it is run from its own dir, not as part of the Django suite. Ignore it
# here so the Django runner doesn't try to collect it under DJANGO_SETTINGS.
addopts = "--ignore=packages"
